# actix-mongodb

./: Cargo.toml  Makefile
src/: lib.rs  main.rs  server.rs
src/api/: mod.rs  routers.rs
src/api/devices/: create_device_usecase.rs  datasource.rs  delete_by_id_usecase.rs  get_by_id_usecase.rs  get_list_usecase.rs  mod.rs  model.rs  repository.rs  router.rs  update_by_id_usecase.rs
src/database/: mongodb.rs
src/di/: provider.rs
