[package]
name = "actix-mongodb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.136"
serde_json = "1.0.79"
actix-web = "4"
async-trait = "0.1.53"
futures = "0.3.21"
log = "0.4"
env_logger = "0.9.0"
serde_with = "1.12.0"

[dependencies.mongodb]
version = "2.1.0"
default-features = false
features = ["sync"]
